feat: Fluxo de autenticacao com validacao realizado

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "no-confusing-arrow": "off"
   }
 }
