feat: Inputs e botoes atualizados iguais ao style guide

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,8 +41,10 @@
     "react/jsx-props-no-spreading": "off",
     "react/jsx-one-expression-per-line": "off",
     "no-confusing-arrow": "off",
+    "object-curly-newline": "off",
     "implicit-arrow-linebreak": "off",
     "react/jsx-curly-newline": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "no-nested-ternary": "off"
   }
 }
